--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 #map {
   position: absolute;
-  top: 15%;
+  top: 13%;
   left: 4%;
   right: 4%;
   bottom: 10%;
@@ -29,10 +29,11 @@ p {
   font-style: normal;
 }
 
-footer {
+.footer {
+  font-family: "Lucida Console", Courier, monospace;
+  width: 100%;
+  /* height: 2px; */
   position: absolute;
   bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-  text-align: center;
+  left: 50%;
 }
